데이터 전처리

--- a/trainModel.ipynb
+++ b/trainModel.ipynb
@@ -47,6 +47,46 @@
     "save_model_path = f\"result/{model_type}{dataset}.pt\"\n",
     "save_history_path = f\"result/{model_type}history{dataset}.pt\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af4d45e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dir = 'dataset/train'\n",
+    "valid_dir = 'dataset/valid'\n",
+    "test_dir = 'dataset/test'\n",
+    "\n",
+    "train_transform = transforms.Compose([\n",
+    "    transforms.RandomHorizontalFlip(p=0.5),\n",
+    "    transforms.ColorJitter(brightness=0.2, contrast=0.2),\n",
+    "    transforms.Resize((256, 256)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+    "])\n",
+    "\n",
+    "valid_transform = transforms.Compose([\n",
+    "    transforms.Resize((256, 256)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+    "])\n",
+    "\n",
+    "test_transform = transforms.Compose([\n",
+    "    transforms.Resize((256, 256)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+    "])\n",
+    "\n",
+    "train_DS = datasets.ImageFolder(train_dir, transform=train_transform)\n",
+    "valid_DS = datasets.ImageFolder(valid_dir, transform=valid_transform)\n",
+    "test_DS = datasets.ImageFolder(test_dir, transform=test_transform)\n",
+    "\n",
+    "train_DL = DataLoader(train_DS, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "valid_DL = DataLoader(valid_DS, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "test_DL = DataLoader(test_DS, batch_size=BATCH_SIZE, shuffle=True)"
+   ]
   }
  ],
  "metadata": {
