디바이스 변경 확인용 출력 추가

--- a/trainModel.ipynb
+++ b/trainModel.ipynb
@@ -51,6 +51,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c0061c95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "af4d45e9",
    "metadata": {},
    "outputs": [],
