Hyperparameter - 배치사이즈 오타 수정

--- a/trainModel.ipynb
+++ b/trainModel.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
@@ -16,9 +15,12 @@
      },
      "user_tz": -540
     },
-    "id": "initial_id"
+    "id": "initial_id",
+    "ExecuteTime": {
+     "end_time": "2024-12-04T06:50:18.058192Z",
+     "start_time": "2024-12-04T06:50:15.466648Z"
+    }
    },
-   "outputs": [],
    "source": [
     "from torch import nn, optim\n",
     "from torchvision import datasets, transforms, models\n",
@@ -27,16 +29,21 @@
     "import torch\n",
     "import time\n",
     "import matplotlib.pyplot as plt"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "0993dbd1",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T06:50:30.136727Z",
+     "start_time": "2024-12-04T06:50:30.115585Z"
+    }
+   },
    "source": [
-    "BATCHSIZE = 32\n",
+    "BATCH_SIZE = 32\n",
     "EPOCH = 8\n",
     "LR = 0.0001\n",
     "new_model_train = True\n",
@@ -46,24 +53,45 @@
     "dataset = \"dataset\"\n",
     "save_model_path = f\"result/{model_type}{dataset}.pt\"\n",
     "save_history_path = f\"result/{model_type}history{dataset}.pt\""
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "c0061c95",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T06:50:20.688761Z",
+     "start_time": "2024-12-04T06:50:20.680831Z"
+    }
+   },
    "source": [
     "device"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cpu'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "af4d45e9",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-04T06:50:22.239820Z",
+     "start_time": "2024-12-04T06:50:21.593054Z"
+    }
+   },
    "source": [
     "train_dir = 'dataset/train'\n",
     "valid_dir = 'dataset/valid'\n",
@@ -96,7 +124,29 @@
     "train_DL = DataLoader(train_DS, batch_size=BATCH_SIZE, shuffle=True)\n",
     "valid_DL = DataLoader(valid_DS, batch_size=BATCH_SIZE, shuffle=True)\n",
     "test_DL = DataLoader(test_DS, batch_size=BATCH_SIZE, shuffle=True)"
-   ]
+   ],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'BATCH_SIZE' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[4], line 29\u001B[0m\n\u001B[1;32m     26\u001B[0m valid_DS \u001B[38;5;241m=\u001B[39m datasets\u001B[38;5;241m.\u001B[39mImageFolder(valid_dir, transform\u001B[38;5;241m=\u001B[39mvalid_transform)\n\u001B[1;32m     27\u001B[0m test_DS \u001B[38;5;241m=\u001B[39m datasets\u001B[38;5;241m.\u001B[39mImageFolder(test_dir, transform\u001B[38;5;241m=\u001B[39mtest_transform)\n\u001B[0;32m---> 29\u001B[0m train_DL \u001B[38;5;241m=\u001B[39m DataLoader(train_DS, batch_size\u001B[38;5;241m=\u001B[39m\u001B[43mBATCH_SIZE\u001B[49m, shuffle\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[1;32m     30\u001B[0m valid_DL \u001B[38;5;241m=\u001B[39m DataLoader(valid_DS, batch_size\u001B[38;5;241m=\u001B[39mBATCH_SIZE, shuffle\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[1;32m     31\u001B[0m test_DL \u001B[38;5;241m=\u001B[39m DataLoader(test_DS, batch_size\u001B[38;5;241m=\u001B[39mBATCH_SIZE, shuffle\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'BATCH_SIZE' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "a9f59bd6db00e33"
   }
  ],
  "metadata": {
