--- a/trainModel.ipynb
+++ b/trainModel.ipynb
@@ -17,8 +17,8 @@
     },
     "id": "initial_id",
     "ExecuteTime": {
-     "end_time": "2024-12-04T06:50:18.058192Z",
-     "start_time": "2024-12-04T06:50:15.466648Z"
+     "end_time": "2024-12-05T04:33:56.654614Z",
+     "start_time": "2024-12-05T04:33:54.112564Z"
     }
    },
    "source": [
@@ -38,8 +38,8 @@
    "id": "0993dbd1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T06:50:30.136727Z",
-     "start_time": "2024-12-04T06:50:30.115585Z"
+     "end_time": "2024-12-05T04:34:00.069258Z",
+     "start_time": "2024-12-05T04:34:00.065148Z"
     }
    },
    "source": [
@@ -55,15 +55,15 @@
     "save_history_path = f\"result/{model_type}history{dataset}.pt\""
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "id": "c0061c95",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T06:50:20.688761Z",
-     "start_time": "2024-12-04T06:50:20.680831Z"
+     "end_time": "2024-12-05T04:34:00.326492Z",
+     "start_time": "2024-12-05T04:34:00.319686Z"
     }
    },
    "source": [
@@ -88,8 +88,8 @@
    "id": "af4d45e9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T06:50:22.239820Z",
-     "start_time": "2024-12-04T06:50:21.593054Z"
+     "end_time": "2024-12-05T04:34:00.824375Z",
+     "start_time": "2024-12-05T04:34:00.800622Z"
     }
    },
    "source": [
@@ -125,20 +125,45 @@
     "valid_DL = DataLoader(valid_DS, batch_size=BATCH_SIZE, shuffle=True)\n",
     "test_DL = DataLoader(test_DS, batch_size=BATCH_SIZE, shuffle=True)"
    ],
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'BATCH_SIZE' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[4], line 29\u001B[0m\n\u001B[1;32m     26\u001B[0m valid_DS \u001B[38;5;241m=\u001B[39m datasets\u001B[38;5;241m.\u001B[39mImageFolder(valid_dir, transform\u001B[38;5;241m=\u001B[39mvalid_transform)\n\u001B[1;32m     27\u001B[0m test_DS \u001B[38;5;241m=\u001B[39m datasets\u001B[38;5;241m.\u001B[39mImageFolder(test_dir, transform\u001B[38;5;241m=\u001B[39mtest_transform)\n\u001B[0;32m---> 29\u001B[0m train_DL \u001B[38;5;241m=\u001B[39m DataLoader(train_DS, batch_size\u001B[38;5;241m=\u001B[39m\u001B[43mBATCH_SIZE\u001B[49m, shuffle\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[1;32m     30\u001B[0m valid_DL \u001B[38;5;241m=\u001B[39m DataLoader(valid_DS, batch_size\u001B[38;5;241m=\u001B[39mBATCH_SIZE, shuffle\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[1;32m     31\u001B[0m test_DL \u001B[38;5;241m=\u001B[39m DataLoader(test_DS, batch_size\u001B[38;5;241m=\u001B[39mBATCH_SIZE, shuffle\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'BATCH_SIZE' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-05T04:34:04.092893Z",
+     "start_time": "2024-12-05T04:34:04.086551Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "class ResNet(nn.Module):\n",
+    "    def __init__(self, num_classes=6):\n",
+    "        super().__init__()\n",
+    "        self.resnet = models.resnet50(weights=models.ResNet50_Weights.DEFAULT)\n",
+    "        self.resnet = nn.Sequential(*list(self.resnet.children())[:-1])\n",
+    "\n",
+    "        self.classifier = nn.Sequential(\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(2048, 1024),\n",
+    "            nn.BatchNorm1d(1024, momentum=0.05),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.5),\n",
+    "            nn.Linear(1024, 512),\n",
+    "            nn.BatchNorm1d(512, momentum=0.05),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.4),\n",
+    "            nn.Linear(512, num_classes),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.resnet(x)\n",
+    "        x = self.classifier(x)\n",
+    "        return x"
+   ],
+   "id": "a9f59bd6db00e33",
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -146,7 +171,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "a9f59bd6db00e33"
+   "id": "2e6dfe0a18a5066"
   }
  ],
  "metadata": {
