Loss 계산함수 추가

--- a/trainModel.ipynb
+++ b/trainModel.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-05T04:33:56.654614Z",
+     "start_time": "2024-12-05T04:33:54.112564Z"
+    },
     "collapsed": true,
     "executionInfo": {
      "elapsed": 19615,
@@ -15,12 +20,9 @@
      },
      "user_tz": -540
     },
-    "id": "initial_id",
-    "ExecuteTime": {
-     "end_time": "2024-12-05T04:33:56.654614Z",
-     "start_time": "2024-12-05T04:33:54.112564Z"
-    }
+    "id": "initial_id"
    },
+   "outputs": [],
    "source": [
     "from torch import nn, optim\n",
     "from torchvision import datasets, transforms, models\n",
@@ -29,12 +31,11 @@
     "import torch\n",
     "import time\n",
     "import matplotlib.pyplot as plt"
-   ],
-   "outputs": [],
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "id": "0993dbd1",
    "metadata": {
     "ExecuteTime": {
@@ -42,6 +43,7 @@
      "start_time": "2024-12-05T04:34:00.065148Z"
     }
    },
+   "outputs": [],
    "source": [
     "BATCH_SIZE = 32\n",
     "EPOCH = 8\n",
@@ -53,12 +55,11 @@
     "dataset = \"dataset\"\n",
     "save_model_path = f\"result/{model_type}{dataset}.pt\"\n",
     "save_history_path = f\"result/{model_type}history{dataset}.pt\""
-   ],
-   "outputs": [],
-   "execution_count": 2
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "id": "c0061c95",
    "metadata": {
     "ExecuteTime": {
@@ -66,9 +67,6 @@
      "start_time": "2024-12-05T04:34:00.319686Z"
     }
    },
-   "source": [
-    "device"
-   ],
    "outputs": [
     {
      "data": {
@@ -81,10 +79,13 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "source": [
+    "device"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "id": "af4d45e9",
    "metadata": {
     "ExecuteTime": {
@@ -92,6 +93,7 @@
      "start_time": "2024-12-05T04:34:00.800622Z"
     }
    },
+   "outputs": [],
    "source": [
     "train_dir = 'dataset/train'\n",
     "valid_dir = 'dataset/valid'\n",
@@ -124,18 +126,19 @@
     "train_DL = DataLoader(train_DS, batch_size=BATCH_SIZE, shuffle=True)\n",
     "valid_DL = DataLoader(valid_DS, batch_size=BATCH_SIZE, shuffle=True)\n",
     "test_DL = DataLoader(test_DS, batch_size=BATCH_SIZE, shuffle=True)"
-   ],
-   "outputs": [],
-   "execution_count": 4
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a9f59bd6db00e33",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-05T04:34:04.092893Z",
      "start_time": "2024-12-05T04:34:04.086551Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "class ResNet(nn.Module):\n",
     "    def __init__(self, num_classes=6):\n",
@@ -160,18 +163,36 @@
     "        x = self.resnet(x)\n",
     "        x = self.classifier(x)\n",
     "        return x"
-   ],
-   "id": "a9f59bd6db00e33",
-   "outputs": [],
-   "execution_count": 5
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "2e6dfe0a18a5066"
+   "id": "2e6dfe0a18a5066",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loss_epoch(model, DL, criterion, optimizer = None):\n",
+    "    N = len(DL.dataset)\n",
+    "    rloss = 0; rcorrect = 0\n",
+    "    for x_batch, y_batch in tqdm(DL, leave=False):\n",
+    "        x_batch = x_batch.to(device)\n",
+    "        y_batch = y_batch.to(device)\n",
+    "        y_hat = model(x_batch)\n",
+    "        loss = criterion(y_hat, y_batch)\n",
+    "        if optimizer is not None:\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "        loss_b = loss.item() * x_batch.shape[0]\n",
+    "        rloss += loss_b\n",
+    "        pred = torch.argmax(y_hat, dim=1)\n",
+    "        corrects_b = torch.sum(pred == y_batch).item()\n",
+    "        rcorrect += corrects_b\n",
+    "    loss_e = rloss/N\n",
+    "    accruracy_e = rcorrect/N * 100\n",
+    "    return loss_e, accruracy_e, rcorrect"
+   ]
   }
  ],
  "metadata": {
