Model Train함수 추가

--- a/trainModel.ipynb
+++ b/trainModel.ipynb
@@ -193,6 +193,53 @@
     "    accruracy_e = rcorrect/N * 100\n",
     "    return loss_e, accruracy_e, rcorrect"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "748b0530",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Train(model, train_DL, val_DL, criterion, optimizer,\n",
+    "          EPOCH, BATCH_SIZE, save_model_path, save_history_path):\n",
+    "    loss_history = {\"train\" : [], \"val\":[]}\n",
+    "    acc_history = {\"train\" : [], \"val\":[]}\n",
+    "    best_loss = 9999\n",
+    "    for ep in range(EPOCH):\n",
+    "        epoch_start = time.time()\n",
+    "        current_lr = optimizer.param_groups[0][\"lr\"]\n",
+    "        print(f\"Epoch : {ep+1}, current_LR = {current_lr}\")\n",
+    "\n",
+    "        model.train()\n",
+    "        train_loss, train_acc, _ = loss_epoch(model, train_DL, criterion, optimizer)\n",
+    "        loss_history[\"train\"] += [train_loss]\n",
+    "        acc_history[\"train\"] += [train_acc]\n",
+    "\n",
+    "        model.eval()\n",
+    "        with torch.no_grad():\n",
+    "            val_loss, val_acc, _ = loss_epoch(model, val_DL, criterion)\n",
+    "            loss_history[\"val\"] += [val_loss]\n",
+    "            acc_history[\"val\"] += [val_acc]\n",
+    "\n",
+    "            if val_loss < best_loss:\n",
+    "                best_loss = val_loss\n",
+    "                torch.save({\"model\" : model,\n",
+    "                            \"ep\" : ep,\n",
+    "                            \"optimizer\" : optimizer}, save_model_path)\n",
+    "        print(f\"train loss: {round(train_loss,5)}, \"\n",
+    "              f\"val loss: {round(val_loss,5)} \\n\"\n",
+    "              f\"train acc: {round(train_acc,1)} %, \"\n",
+    "              f\"val acc: {round(val_acc,1)} %, time: {round(time.time()-epoch_start)} s\")\n",
+    "        print(\"-\"*20)\n",
+    "\n",
+    "    torch.save({\"loss_history\" : loss_history,\n",
+    "                \"acc_history\" : acc_history,\n",
+    "                \"EPOCH\": EPOCH,\n",
+    "                \"BATCH_SIZE\": BATCH_SIZE}, save_history_path)\n",
+    "\n",
+    "    return loss_history"
+   ]
   }
  ],
  "metadata": {
