--- a/trainModel.ipynb
+++ b/trainModel.ipynb
@@ -240,6 +240,23 @@
     "\n",
     "    return loss_history"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33504bce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Test(model, test_DL, criterion):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        test_loss, test_acc, rcorrect = loss_epoch(model, test_DL, criterion)\n",
+    "    print()\n",
+    "    print(f\"Test loss : {round(test_loss,5)}\")\n",
+    "    print(f\"Test accuracy : {rcorrect}/{len(test_DL.dataset)} ({round(test_acc,1)} %)\")\n",
+    "    return round(test_acc,1)"
+   ]
   }
  ],
  "metadata": {
