Test_plot 함수 추가

--- a/trainModel.ipynb
+++ b/trainModel.ipynb
@@ -257,6 +257,32 @@
     "    print(f\"Test accuracy : {rcorrect}/{len(test_DL.dataset)} ({round(test_acc,1)} %)\")\n",
     "    return round(test_acc,1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b299b8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Test_plot(model, test_DL):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        x_batch, y_batch = next(iter(test_DL))\n",
+    "        x_batch = x_batch.to(device)\n",
+    "        y_hat = model(x_batch)\n",
+    "        pred = y_hat.argmax(dim=1)\n",
+    "\n",
+    "    x_batch = x_batch.to(\"cpu\")\n",
+    "\n",
+    "    plt.figure(figsize=(10,4))\n",
+    "    for idx in range(6):\n",
+    "        plt.subplot(2,3, idx+1, xticks=[], yticks=[])\n",
+    "        plt.imshow(x_batch[idx].permute(1,2,0).squeeze(), cmap=\"gray\")\n",
+    "        pred_class = test_DL.dataset.classes[pred[idx]]\n",
+    "        true_class = test_DL.dataset.classes[y_batch[idx]]\n",
+    "        plt.title(f\"{pred_class} ({true_class})\", color = \"g\" if pred_class == true_class else \"r\")"
+   ]
   }
  ],
  "metadata": {
