모델 train 셀 추가 & load_model 변수 설정

--- a/trainModel.ipynb
+++ b/trainModel.ipynb
@@ -283,6 +283,45 @@
     "        true_class = test_DL.dataset.classes[y_batch[idx]]\n",
     "        plt.title(f\"{pred_class} ({true_class})\", color = \"g\" if pred_class == true_class else \"r\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea222f36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if new_model_train:\n",
+    "    optimizer = optim.Adam(model.parameters(), lr = LR)\n",
+    "    loss_history = Train(model, train_DL, valid_DL, criterion, optimizer, EPOCH,\n",
+    "                         BATCH_SIZE, save_model_path, save_history_path)\n",
+    "    loss_history = list(loss_history.values())[0]\n",
+    "    plt.plot(range(1, EPOCH+1), loss_history)\n",
+    "    plt.xlabel('Epoch')\n",
+    "    plt.ylabel('loss')\n",
+    "    plt.title(\"Train Loss\")\n",
+    "    plt.grid()\n",
+    "else:\n",
+    "    optimizer = optim.Adam(load_model.parameters(), lr = LR)\n",
+    "    loss_history = Train(load_model, train_DL, valid_DL, criterion, optimizer, EPOCH,\n",
+    "                        BATCH_SIZE, save_model_path, save_history_path)\n",
+    "    loss_history = list(loss_history.values())[0]\n",
+    "    plt.plot(range(1, EPOCH+1), loss_history)\n",
+    "    plt.xlabel('Epoch')\n",
+    "    plt.ylabel('loss')\n",
+    "    plt.title(\"Train Loss\")\n",
+    "    plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d710eef3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_model = torch.load(save_model_path)[\"model\"]"
+   ]
   }
  ],
  "metadata": {
