모델 테스트 & 테스트 결과 시각화 구현

--- a/trainModel.ipynb
+++ b/trainModel.ipynb
@@ -322,6 +322,43 @@
    "source": [
     "load_model = torch.load(save_model_path)[\"model\"]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9bd2f88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "Test(load_model, test_DL, criterion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8050194",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((256, 256)),\n",
+    "    transforms.ToTensor(),\n",
+    "])\n",
+    "\n",
+    "test_DS = datasets.ImageFolder(test_dir, transform=transform)\n",
+    "test_DL = DataLoader(test_DS, batch_size=BATCH_SIZE, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4c46d57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Test_plot(load_model, test_DL)"
+   ]
   }
  ],
  "metadata": {
