model 인스턴스 생성 & to device

--- a/trainModel.ipynb
+++ b/trainModel.ipynb
@@ -166,6 +166,17 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "model = ResNet()\n",
+    "model.to(device)"
+   ],
+   "id": "2e42e02dc392db6c"
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2e6dfe0a18a5066",
